# shuzhan_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_test.py  test_agent_integration.py  test_api_payload.py  test_browser_login_debug.py  test_double_dt_token.py  test_double_dt_token2.py  test_login_mcp.py  test_login_type.py  test_mcp_wrapper.py  test_memory.py  test_planner_only.py  test_playwright_capture.py  test_precise_compare.py  test_request_headers.py  test_space_api.py  test_special_headers.py  test_switch_debug.py  test_switch_raw.py  test_switch_tenant_debug.py  test_token_validity.py  test_url_token.py
memory_data/: memory.db
memory_data_test/: memory.db  sqlite_only.db
scripts/: create_project.py  llm_driven_executor.py
src/shuzhan_agent/: __init__.py  main.py
src/shuzhan_agent/agent/: __init__.py  base.py  context_engine.py  datastack_agent.py  llm_driven_agent.py  reflector.py
src/shuzhan_agent/config/: __init__.py  environments.py  offline_flows.py
src/shuzhan_agent/mcp/: __init__.py  api_reference.py  auth.py  base.py  captcha_solver.py  datastack_mcp.py  http_mcp.py  login_mcp.py  mcp_client_manager.py  mcp_registry.py  playwright_integration.py  playwright_mcp.py
src/shuzhan_agent/memory/: __init__.py  base.py  embedding.py  episodic.py  manager.py  memory_tool.py  storage.py  vector_store.py  working.py
src/shuzhan_agent/skills/: __init__.py  notification.py
src/shuzhan_agent/tools/: __init__.py  base.py  mcp_wrapped_tool.py  mcp_wrapper.py
src/shuzhan_agent/utils/: llm_client.py
(+4 files in other folders)
